--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/journals?createDatabaseIfNotExist=false
+spring.datasource.url=jdbc:mysql://localhost:3306/journals?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=journals
 spring.datasource.password=journals
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
